[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unblock"
authors = [
  { name="Mathias Örtenberg Toftås", email="mathias.ortenberg-toftas@outlook.com" },
]
description = "A simple library for unblocking asynchronous code"
readme = "README.md"
requires-python = ">=3.12.0"
version = "1.0.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MathiasToftas/unblock"
Issues = "https://github.com/MathiasToftas/unblock/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pre-commit",
    "build",
    "twine"
]
